--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,11 @@ requests>=2.26.0
 openai>=1.0.0
 anthropic>=0.7.0
 
+# Ollama/LangChain support for local LLMs
+langchain-ollama>=0.1.0
+langchain-core>=0.1.0
+langchain-community>=0.0.20
+
 # Configuration
 python-dotenv>=0.19.2
 
