--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 requests>=2.26.0
 openai>=1.0.0
 anthropic>=0.7.0
+google-genai
 
 # Ollama/LangChain support for local LLMs
 langchain-ollama>=0.1.0
