--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,9 @@ numpy>=1.21.0
 # Visualization
 matplotlib>=3.5.0
 
+# Security analysis
+semgrep>=1.0.0
+
 # Development
 pytest>=7.0.0
 black>=22.0.0
